# ForensicGraphAnalyzer

./: .email-config.json  .gitignore  .gmail-config.json  .replit  .sendgrid-config.json  GrapholexInsight_Architecture_Diagram.md  GrapholexInsight_Features_Documentation.md  INSTALLAZIONE_LOCALE.md  PARAMETRI_ANALISI_GRAFOLOGICA.md  README.md  advanced_signature_analyzer.py  cookies.txt  fix-ocr-indexing.ts  generate-presentation-pdf.js  generate-test-document.py  migliorie-ux-roadmap.md  ocr-complete-mode-guide.md  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  report-endpoint.txt  start-chroma.sh  test-gmail-direct.js  test-gmail-ts.ts  test-ocr-flow-simple.ts  test-ocr-to-knowledge-base.ts  test-ocr-vectorstore.ts  test-pdf-extraction.ts  test-pgvector-full.ts  test-pgvector-mock.ts  test-pgvector.ts  test-reprocess-signature.ts  test-signature-cropping.ts  test-tesseract-ocr.ts  test_document.txt  test_document.xml  testamento_testo.txt  theme.json  (+6 more)
attached_assets/: Pasted--ANALISI-PERITALE-AI-CONFRONTO-PARAMETRO-PER-PARAMETRO-Dimensioni-La-firma-in-verifica-signif-1755182323325_1755182323325.txt  Pasted--PDF-REPORT-File-non-trovato-home-runner-workspace-uploads-reports-temp-report-1746071510055-pdf--1746071577571.txt  Pasted-3-29-17-AM-Request-headers-host-027b3d5c-14b2-4bd5-a918-b82f8808a097-00-6cxx0x8evyfj-worf-repl-1750476605534_1750476605535.txt  Pasted-S-Gmail-pu-essere-usato-tramite-API-per-inviare-email-ma-ci-sono-alcune-considerazioni-impor-1746956088019.txt  firma_analyzer_1752934786549.py
chroma_data/: chroma.sqlite3
(+162 files in other folders)
