[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx2pdf>=0.1.8",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "reportlab>=4.4.0",
    "scikit-image>=0.25.2",
]
